--- a/MyEmailReport/App.config
+++ b/MyEmailReport/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="EmailReport_EmailAccount" value="linhnc@hbcom.vn" />
-    <add key="EmailReport_Password" value="LinhamNhu" />
+    <add key="EmailReport_Password" value="abv" />
     <add key="EmailReport_EmailReceiveList" value="chilinh12003@gmail.com;linhnc@hbcom.vn" />
     <add key="EmailReport_Subject" value="THỐNG KÊ DỊCH VỤ NHẬN DIỆN NGƯỜI NỔI TIẾNG NGÀY " />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
